[project]
name = "splunkbase"
version = "0.1.0"
description = "Check SplunkBase release version"
authors = [
    {name = "dd-Splunk",email = "ddessy@splunk.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "requests",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
